# yc-voice-agents-hackathon

./: README-rag-branch.md  README.md  SUBMISSION.md
server/: Dockerfile  bot-gpt-rag.py  bot-gpt.py  bot-healthcare.py  bot-nemotron-rag.py  bot-nemotron.py  bot.py  healthcare_backend.py  healthcare_data.json  healthcare_rag.py  healthcare_store.py  mock_backend.py  nvidia_stt.py  pyproject.toml  rag.py
