[project]
name = "yc-voice-agent-hackathon"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
requires-python = ">=3.11"
dependencies = [
    # `daily` extra is required for the Pipecat Cloud / Cekura Daily transport.
    "pipecat-ai[daily,gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    # RAG branch additions
    "qdrant-client>=1.9.0",
    "sentence-transformers>=3.0.0",
    "langchain-qdrant>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "langchain-community>=0.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
